apps/hermes-agent/gateway/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hermes-agent-gateway
spec:
  replicas: 1
  serviceName: hermes-agent-gateway
  selector:
    matchLabels:
      app.kubernetes.io/instance: hermes-agent-gateway
      app.kubernetes.io/name: hermes-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hermes-agent-gateway
        app.kubernetes.io/name: hermes-agent
    spec:
      containers:
        - name: hermes-agent-gateway
          image: hermes-agent
          args:
            - gateway
            - run
          volumeMounts:
            - name: data
              mountPath: /opt/data
            - name: rclone-config
              mountPath: /config/rclone/rclone.conf
              subPath: rclone.conf
              readOnly: true
            - name: run
              mountPath: /run
            - name: ssh-key
              mountPath: /root/.ssh
              readOnly: true
          securityContext:
            capabilities:
              add:
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 10000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hermes-agent-data
        - name: rclone-config
          configMap:
            name: hermes-agent-gateway-rclone
        - name: run
          emptyDir: {}
        - name: startup-config
          configMap:
            name: hermes-agent-gateway-startup-config
        - name: ssh-key
          secret:
            secretName: hermes-agent-gateway-ssh
            defaultMode: 0400
