apps/hermes-agent/gateway/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-agent-gateway
spec:
  selector:
    app.kubernetes.io/instance: hermes-agent-gateway
    app.kubernetes.io/name: hermes-agent
  ports: []
